--- a/chatdash/chat.html
+++ b/chatdash/chat.html
@@ -25,8 +25,8 @@
     <div class="container">
       <div class="left-side">
         <div class="header">
-          <div class="userimg_header">
-            <img src="./assets/user.png" style="width: 40px; border-radius: 50%;"/>
+          <div class="userimg_header" >
+            <img id="userimage" src="./assets/user.png" style="width: 40px;height: 40px; border-radius: 50%;"/>
             <p
               class="username"
               style="
@@ -53,7 +53,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">edit profile</a></li>
-                <li><a class="dropdown-item" href="#">log out</a></li>
+                <li><a class="dropdown-item" href="#" id="logout">log out</a></li>
                 <li>
                   <a class="dropdown-item" href="#"></a>
                 </li>
@@ -95,17 +95,17 @@
                     <div class="details">
                         <div class="listhead">
                             <h4>john Doe</h4>
-                            <p class="time">check</p>
+                            <p class="online"></p>
                         </div>
-                    </div>
-                </div> -->
+                    </div>          
+                  </div> -->
         </div>
       </div>
       <div class="right-side">
         <div class="header">
           <div class="imgtext">
             <div class="userimg">
-              <img src="./assets/avatar.png" class="cover" />
+              <img src="./assets/avatar.png" class="cover" id="selectedpicture"/>
             </div>
             <div >
               <h4 id="selectedUsername"></h4>
@@ -139,7 +139,7 @@
       <!-- <button id="logout">logout</button> -->
     </div>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app1.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
@@ -152,19 +152,3 @@
 
   </body>
 </html>
-
-
-
-
-<!-- 
-.friend-msg p{
-  background-color:#fff;
-  color: #252424;
-  text-align: left;
-}
-.time{
-  display: block;
-  /* margin-top: px; */
-  font-size: 0.85em;
-  opacity: 0.5;
-} -->
